2006-06-20  Kevin Cozens  <kcozens@cvs.gnome.org>

	* autogen.sh
	* configure.in: It was an almost perfect import. Missed a few spots
	where the old project name of RuG was still being used.

2006-06-20  Kevin Cozens  <kcozens@cvs.gnome.org>

	* Created autoconf'ed version of the third tarball snapshot
	received from Scott Lembcke on June 19 and imported it to CVS.